--- a/tarjeta.html
+++ b/tarjeta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/tp1_tarjeta/css/estiloTarjeta.css">
+    <link rel="stylesheet" href="/css/estiloTarjeta.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
         <div class="cabecera">
 
             <div class="FotoPerfil">
-                <img class="imagen"  src="/tp1_tarjeta/img/advincula-perujpg.webp" alt="Foto Perfil">
+                <img class="imagen"  src="/img/advincula-perujpg.webp" alt="Foto Perfil">
 
             </div>
 
