--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title></title>
 </head>
 <body>
-    <a href="./tarjeta.html">tarjeta</a>
+    <a href="tarjeta.html">tarjeta</a>
 </body>
 </html>
